# FWI

./: LICENSE  README.md  pyproject.toml
FNO/: fno.py  losses.py
GAN/Discriminator/: discriminator.py  losses.py
GAN/Generator/: generator.py  losses.py
Training/: fno_training.py
data/: download.py
data/source_info/: data.md
data/velocity_models/: add_density.py  data.md
dataloaders/: source_waveforms.py  velocity_models.py
